# gooddata-ui-sdk

./: .babelrc  .copyrightexclude  .dockerignore  .editorconfig  .envrc  .eslintrc  .eslintrc.js  .eslintrc.react.js  .fossa.yml  .gitignore  .gitlab-ci.yml  .jshintrc  .lintstagedrc  .oxfmtrc.json  .prettierignore  .prettierrc  .sonar.settings  .stylelintrc  .travis.yml  CHANGELOG.md  CODEOWNERS  Dockerfile  Gruntfile.js  LICENSE  LICENSE.txt  NOTICE  NOTICE.txt  NOTICES.txt  NOTICE_backup  Procfile  README.md  bower.json  build.sh  compTigerVersions.txt  gdc-ci.yaml  gdc_fossa.yaml  gdc_fossa.yml  gulpfile.js  index.d.ts  index.ts  (+23 more)
.github/: CODEOWNERS  pull_request_template.md  users.yml
.storybook/: config.js  middleware.js  preview-head.html  test-storybook.config.js  webpack.config.js
__mocks__/: fixtures.ts  gooddata.ts
ci/: check-dist.sh  lib.sh  run-unit-tests.sh  run-validation.sh
dev_docs/: continuous_integration.md  contributing.md  documentation.md  localisation.md  releases.md  sdk-dev.md  setupIntellij.md  setupVsCode.md
docker/: .config
docs/: .htmltest.yml  Makefile  chartConfig.md  contributing.md  decisions.md  documentation.md  go.mod  go.sum  localisation.md  migration.md  package-lock.json  sdk.md  (+5 more)
libs/sdk-code-convertors/python/: LICENSE  README.md  pyproject.toml
libs/sdk-code-convertors/python/scripts/: generate_types.py
libs/sdk-code-convertors/python/src/gooddata_code_convertors/: __init__.py  _types.py  _wasm_runtime.py  pydantic_models.py
libs/sdk-code-convertors/python/tests/: test_convertors.py  test_models.py  test_types.py
(+28681 files in other folders)
