# (C) 2026 GoodData Corporation

[project]
name = "gooddata-code-convertors"
version = "11.28.0a14"
description = "GoodData AAC YAML / Declarative API code converters (WASM-powered)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = ["wasmtime>=25.0.0,<31.0.0"]
classifiers = ["Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License"]

[project.urls]
Repository = "https://github.com/gooddata/gooddata-ui-sdk"
Source = "https://github.com/gooddata/gooddata-ui-sdk/tree/master/libs/sdk-code-convertors/python"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gooddata_code_convertors"]

[tool.hatch.build.targets.wheel.force-include]
"../wasm/convertors.wasm" = "gooddata_code_convertors/_data/convertors.wasm"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
